# Deep-Coding-Agent

./: .env.example  .gitignore  Readme.md  agent_plan.md  config.py  pyproject.toml  requirements-dev.txt  requirements-prod.txt
Docs/: HLD.puml  Plan.md
agent/: README.md  __init__.py  coding_agent.py  orchestrator.py  planner_agent.py  prompts.py  reviewer.py  state.py  test_builder.py
agent_api/: README.md  __init__.py  app.py  dependencies.py  logging.py  main.py  schemas.py  service.py
agent_api/routers/: __init__.py  health.py  runs.py
tests/: test_api.py  test_coding_agent_paths.py  test_config.py  test_orchestrator.py  test_plan_tools.py  test_planner_agent.py  test_shell_tools.py  test_test_runner.py
tools/: README.md  __init__.py  file_tools.py  plan_tools.py  research_tools.py  shell_tools.py  todo_tools.py
utils/: README.md  file_descriptions.py  files.py  plan_descriptions.py  plans.py  shell.py
